--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   "scripts": {
     "dev": "nodemon --exec ts-node-esm src/index.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@puppeteer/browsers": "^2.4.1",
     "@types/puppeteer": "^7.0.4",
+    "antibotbrowser": "^2.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "puppeteer": "^23.6.1",
+    "puppeteer": "^23.8.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
